changed bgcolor to blue

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,7 @@
+#app configuration file for Tanzu Application Service to deploy your application when running cf push
 ---
 version: 1
 applications:
 - name: flask-app
   routes:
-  - route: flask-app-[your-unique-username].apps.smu.hackathon.systems
+  - route: flask-app-javieryw.apps.smu.hackathon.systems
